# emoji-search

./: README.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  init_qdrant_collection.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 50f7be21f3f8_initial.py
backend/app/: feature_extractor.py  lifespan.py  main.py  settings.py
backend/app/api/: __init__.py  dependency.py  exception_handling.py  model.py  response.py
backend/app/api/v1/: __init__.py  mapper.py  model.py  router.py
backend/app/domain/: exception.py  use_case.py  value_object.py
backend/app/infrastructure/: db.py  feature_extractor.py  gateway.py  repo.py  table.py  vector_db.py
backend/app/utils/: exception_handling.py  time.py  types.py
backend/app/vector_db/: client.py  repository.py
frontend/: .prettierignore  .prettierrc.mjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx  theme.ts
frontend/src/component/: SmallCopyButton.tsx  index.ts
frontend/src/component/ColorThemeControl/: ColorSchemeControl.module.css  ColorThemeControl.tsx  index.ts
frontend/src/component/EmojiList/: EmojiList.tsx  EmojiListItem.tsx
frontend/src/component/EmojiSearch/: EmojiSearch.tsx  index.ts
frontend/src/component/FeedbackModal/: FeedbackForm.tsx  FeedbackModal.tsx  FirstStep.tsx
frontend/src/component/RadioCard/: RadioCard.module.css  RadioCard.tsx
frontend/src/page/: HomePage.tsx  Layout.tsx
frontend/src/shared/api/: autocomplete.ts  feedback.ts  model.ts  search.ts
