[project]
name = "emoji-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=0.8.10",
    "datasets>=3.2.0",
    "fastapi[standard]>=0.115.6",
    "multidict>=6.1.0",
    "onnxruntime>=1.20.1",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.12.2",
    "tokenizers>=0.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "ruff>=0.8.3",
]

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "Q",     # flake8-quotes
    "ANN",   # flake8-annotations
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "EM",    # flake8-errmsg
    "PYI",   # flake8-pyi
    "SIM",   # flake8-simplify
    "DTZ",   # flake8-datetimez
    "ASYNC", # flake8-async,
    "FBT",   # flake8-boolean-trap
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "PT",    # flake8-pytest-style
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "RUF",   # Ruff-specific rules
    "FAST",  # FastAPI-specific rules
    "NPY",   # NumPy-specific rules
]
ignore = ["PLR0913", "PT011", "ANN101", "ANN102", "N818"]
fixable = ["ALL"]
extend-safe-fixes = ["W291"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
